# olbootstrapping

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
benchmarking/: README.md  benchmark_notebook.ipynb  main_benchmark_notebook.ipynb
benchmarking/multiprocessing/: functions.py  multiprocessing_notebook_ar.ipynb  multiprocessing_notebook_hyperparameters.ipynb  multiprocessing_notebook_timer.ipynb  online_notebook.ipynb  plotting.ipynb
benchmarking/pybe/: 2_dependent_benchmark.py  iid_benchmark.py
bstrapping/: discrete_bootstrap.py  weighted_bootstrap.py
bstrapping/bootstrap_procedures/: discrete_bootstrap.py  weighted_bootstrap.py
bstrapping/interfaces/: bootstrap.py  online_bootstrap.py
bstrapping/synthetic_time_series/: moving_average.py
bstrapping/weights/: gaussian_weights.py  moving_average.py  recursive_defined_sequence.py
examples/: discrete_bootstrap_with_iid_samples.py  weighted_bootstrap_with_iid_samples.py  weighted_bootstrap_with_weak_dependence_sequence.py
notebooks/: coveragestudy.ipynb  mutliplier_bootstrap.ipynb  online_transform_exp.ipynb  plotting.ipynb  rebuttel.ipynb  runtime.ipynb  timeseries.ipynb  timeseries_rebuttal.ipynb
notebooks/helpers/: _helpers.py
olbootstrap/: __init__.py
olbootstrap/experiments/: __init__.py  _base_experiment.py  _ess.py  _experiments.py
olbootstrap/means/: __init__.py  _mean_estimator.py
olbootstrap/online_bootstrap/: __init__.py  _base_bootstrap.py  _block_bootstrap.py  _online_ar_bootstrap.py  _online_gaussian_bootstrap.py
(+41 files in other folders)
