[metadata]
name = bstrapping
version = attr: my_package.VERSION
author = Nicolai Palm
author_email = nicolaipalm@googlemail.com
description = Small package implementing multiple bootstrapping procedures in Python
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status:: 1 - Planning

[options]
python_requires = >=3.7
install_requires =
    numpy


[options.extras_require]
test =
    pytest
    coverage
