[metadata]
name = bstrapping
author = anonymous
author_email = anonymous
description = Small package implementing multiple bootstrapping procedures in Python
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status:: 1 - Planning

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    numpy


[options.extras_require]
dev = pre-commit; flake8; flake8-print
